<resources>
    <string name="app_name" translatable="false">GSD Games</string>
    <string name="welcome_text" translatable="false">GSD GAMES</string>
    <string name="skip" translatable="false">Пропустить</string>
    <string name="hello" translatable="false">Добро пожаловать!</string>
    <string name="scope" translatable="false">Возможности приложения</string>
    <string name="load_one" translatable="false">Откройте для себя мир настольных игр вместе с нами.</string>
    <string name="load_two"><b>Поиск игр:</b> Легко находите и быстро бронируйте игры.</string>
    <string name="load_two2"><b>Сообщество:</b> Включайтесь в игровое сообщество и находите новых друзей.</string>
    <string name="start" translatable="false">Начать</string>
    <string name="done" translatable="false">Готово</string>
    <string name="play" translatable="false">ВО ЧТО ИГРАЕМ СЕГОДНЯ?</string>
    <string name="game" translatable="false">ВЫБЕРИ СВОЮ ИГРУ</string>
    <string name="txt_menu_1" translatable="false">Мафия</string>
    <string name="txt_menu_1_2" translatable="false">Ролевая игра, где участники вычисляют мафиози среди мирных жителей.</string>
    <string name="txt_menu_2" translatable="false">Манчкин</string>
    <string name="txt_menu_2_2" translatable="false">Настольная игра, где игроки сражаются \nс монстрами и \nсобирают сокровища.</string>
    <string name="txt_menu_3" translatable="false">Бункер</string>
    <string name="txt_menu_3_2" translatable="false">Настольная игра, где игроки решают, кто достоин места \nв убежище.</string>
    <string name="txt_menu_4" translatable="false">Монополия</string>
    <string name="txt_menu_4_2" translatable="false">Настольная игра, где игроки покупают,\nпродают недвижимость, стремясь разбогатеть.</string>
    <string name="lk" translatable="false">ЛИЧНЫЙ КАБИНЕТ</string>
    <string name="faq" translatable="false">О НАС</string>
    <string name="txt_faq1" translatable="false"> — это место, где Вы можете</string>
    <string name="txt_faq1_2" translatable="false">расслабиться и поиграть с профессиональными ведущими.</string>
    <string name="txt_faq1_3" translatable="false">Наши игры разработаны с уникальным дизайном и заданиями, приближёнными к реальной жизни \nв России. Это поможет вам не только выстроить коммуникацию и партнёрство в реальной жизни, \nно и правильно распоряжаться своими финансами.</string>
    <string name="questions" translatable="false">ЧАСТЫЕ ВОПРОСЫ</string>
    <string name="txt_faq01" translatable="false">01</string>
    <string name="txt_faq02" translatable="false">02</string>
    <string name="txt_faq03" translatable="false">03</string>
    <string name="txt_faq04" translatable="false">04</string>
    <string name="txt_faq01_2" translatable="false">МОЖНО ЛИ ПРИЙТИ НА ИГРУ БЕЗ ЗАПИСИ?</string>
    <string name="txt_faq02_2" translatable="false">КАК ОТМЕНИТЬ ИГРУ?</string>
    <string name="txt_faq03_2" translatable="false">ГДЕ ПРОВОДЯТСЯ ИГРЫ?</string>
    <string name="txt_faq04_2" translatable="false">МОЖНО ЛИ ПРИНОСИТЬ СВОИ НАСТОЛЬНЫЕ ИГРЫ В КЛУБ?</string>
    <string name="txt_faq01_full" translatable="false">Конечно! Вы можете заранее записаться на игру или прийти “по факту”, но места за игровым столом может не оказаться. Наличие свободных мест определяется ведущим.\n </string>
    <string name="txt_faq02_full" translatable="false">Игру можно отменить двумя способами: через официальный сайт или воспользовавшись телеграмм-ботом.\n </string>
    <string name="txt_faq03_full" translatable="false">Игры проходят как в Москве, так и в Нижнем Новгороде. У вас есть возможность выбрать локацию согласно вашим предпочтениям: будь то уютная атмосфера кальянной или же непринужденная обстановка кафе либо бара.\n </string>
    <string name="txt_faq04_full" translatable="false">У нас работают профессиональные ведущие с актерским образованием, которые проводят игры по заранее подготовленному сценарию. По этой причине использование собственных игр не допускается.\n </string>

</resources>