<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".loading.LoadingTwoFragment">

    <TextView
        android:id="@+id/skip2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cruinn_regular"
        android:text="@string/skip"
        android:textColor="@color/gold"
        android:textSize="15sp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cruinn_bold"
        android:text="@string/scope"
        android:textColor="@color/gold"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="100dp"/>

    <ImageView
        android:id="@+id/load2"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginTop="130dp"
        android:gravity="center"
        app:srcCompat="@drawable/loading2" />

    <TextView
        android:id="@+id/desc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="470dp"
        android:fontFamily="@font/cruinn_regular"
        android:text="@string/load_two"
        android:textColor="@color/gold"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/desc2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="515dp"
        android:fontFamily="@font/cruinn_regular"
        android:text="@string/load_two2"
        android:textColor="@color/gold"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="600dp"
        android:backgroundTint="@color/gold"
        android:fontFamily="@font/cruinn_regular"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        android:text="@string/done"
        />

    <LinearLayout
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="10dp">
        <View
            android:id="@+id/indic3"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="2dp"
            android:background="@drawable/circle" />
        <View
            android:id="@+id/indic4"
            android:layout_width="30dp"
            android:layout_height="10dp"
            android:layout_margin="8dp"
            android:background="@drawable/elipse" />
    </LinearLayout>

</FrameLayout>