<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.MenuFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/black">

        <TextView
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/corner"
            android:fontFamily="@font/title_black_cruinn"
            android:gravity="bottom"
            android:paddingStart="20dp"
            android:paddingBottom="20dp"
            android:text="@string/play"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="340dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/star" />

        <TextView
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/title_black_cruinn"
            android:gravity="bottom"
            android:paddingStart="20dp"
            android:paddingBottom="20dp"
            android:text="@string/game"
            android:textColor="@color/gold"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/play_game"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="260dp"
            android:layout_marginTop="95dp"
            app:srcCompat="@drawable/star" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_marginTop="140dp"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:background="@drawable/menu">
                <ImageView
                    android:id="@+id/img_menu1"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="30dp"
                    app:srcCompat="@drawable/mafia" />
                <TextView
                    android:id="@+id/txt_menu1"
                    android:layout_width="180dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="180dp"
                    android:fontFamily="@font/cruinn_regular"
                    android:text="@string/txt_menu_1"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/txt_menu1_2"
                    android:layout_width="180dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginStart="180dp"
                    android:fontFamily="@font/cruinn_regular"
                    android:text="@string/txt_menu_1_2"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:background="@drawable/menu"
                >
                <ImageView
                    android:id="@+id/img_menu2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp"
                    app:srcCompat="@drawable/munchkin" />
                <TextView
                    android:id="@+id/txt_menu2"
                    android:layout_width="180dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="180dp"
                    android:fontFamily="@font/cruinn_regular"
                    android:text="@string/txt_menu_2"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/txt_menu2_2"
                    android:layout_width="180dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginStart="180dp"
                    android:fontFamily="@font/cruinn_regular"
                    android:text="@string/txt_menu_2_2"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:background="@drawable/menu"
                >
                <ImageView
                    android:id="@+id/img_menu3"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp"
                    app:srcCompat="@drawable/bunker" />
                <TextView
                    android:id="@+id/txt_menu3"
                    android:layout_width="180dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="180dp"
                    android:fontFamily="@font/cruinn_regular"
                    android:text="@string/txt_menu_3"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/txt_menu3_2"
                    android:layout_width="180dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginStart="180dp"
                    android:fontFamily="@font/cruinn_regular"
                    android:text="@string/txt_menu_3_2"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:background="@drawable/menu"
                >
                <ImageView
                    android:id="@+id/img_menu4"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp"
                    app:srcCompat="@drawable/monopoly" />
                <TextView
                    android:id="@+id/txt_menu4"
                    android:layout_width="180dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="180dp"
                    android:fontFamily="@font/cruinn_regular"
                    android:text="@string/txt_menu_4"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/txt_menu4_2"
                    android:layout_width="180dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginStart="180dp"
                    android:fontFamily="@font/cruinn_regular"
                    android:text="@string/txt_menu_4_2"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </FrameLayout>
        </LinearLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>